Added one image
Added one image to understand the concept better

--- a/Day 008/index.html
+++ b/Day 008/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <img src="inline-block-element-image.jpg" alt="example image" width="350">
+
     <!-- the paragraph is block element -->
     <p>Hey I am a paragraph and I am block element</p>
 
